{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 27,
  "lineage": "d994803e-3f5d-8f8d-e507-d01ae4dca1dd",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00beae93a2d981137",
            "arn": "arn:aws:ec2:us-east-1:891377331501:instance/i-0c58b8da6050bc4ea",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c58b8da6050bc4ea",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "appkey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b6e68179a3cbc563",
            "private_dns": "ip-10-0-1-59.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.59",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0474eefc079db070e",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-015e542ffb07b1891",
            "tags": {
              "Name": "example-instance-1"
            },
            "tags_all": {
              "Name": "example-instance-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01d3959b760784942"
            ]
          },
          "dependencies": [
            "module.subnet.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00beae93a2d981137",
            "arn": "arn:aws:ec2:us-east-1:891377331501:instance/i-0f0c90f45b09dd495",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f0c90f45b09dd495",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "appkey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a74d5bac62d0756a",
            "private_dns": "ip-10-0-2-153.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.153",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-050d85d25e81264ae",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a2400019686c2868",
            "tags": {
              "Name": "example-instance-2"
            },
            "tags_all": {
              "Name": "example-instance-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01d3959b760784942"
            ]
          },
          "dependencies": [
            "module.subnet.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.internet_gateway",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377331501:internet-gateway/igw-02a46d3885620a67e",
            "id": "igw-02a46d3885620a67e",
            "owner_id": "891377331501",
            "tags": {
              "Name": "example-igw"
            },
            "tags_all": {
              "Name": "example-igw"
            },
            "vpc_id": "vpc-03ea246cf31627f2e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:891377331501:loadbalancer/app/example-lb/5e5f4eaf5c1bd1da",
            "arn_suffix": "app/example-lb/5e5f4eaf5c1bd1da",
            "desync_mitigation_mode": "defensive",
            "dns_name": "example-lb-1877620986.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:891377331501:loadbalancer/app/example-lb/5e5f4eaf5c1bd1da",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "example-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-01d3959b760784942"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-015e542ffb07b1891"
              },
              {
                "subnet_id": "subnet-0a2400019686c2868"
              }
            ],
            "subnets": [
              "subnet-015e542ffb07b1891",
              "subnet-0a2400019686c2868"
            ],
            "tags": {
              "Name": "example-lb"
            },
            "tags_all": {
              "Name": "example-lb"
            },
            "vpc_id": "vpc-03ea246cf31627f2e",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.subnet.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.route_table",
      "mode": "managed",
      "type": "aws_route",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-02a46d3885620a67e",
            "id": "r-rtb-0d332c3a8a300d47d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d332c3a8a300d47d",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.internet_gateway.aws_internet_gateway.this",
            "module.route_table.aws_route_table.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.route_table",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377331501:route-table/rtb-0d332c3a8a300d47d",
            "id": "rtb-0d332c3a8a300d47d",
            "owner_id": "891377331501",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02a46d3885620a67e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "example-route-table"
            },
            "tags_all": {
              "Name": "example-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-03ea246cf31627f2e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.route_table",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0feb1bb5a33c0bcef",
            "route_table_id": "rtb-0d332c3a8a300d47d",
            "subnet_id": "subnet-015e542ffb07b1891"
          },
          "dependencies": [
            "module.route_table.aws_route_table.this",
            "module.subnet.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0da080ea30b06e24c",
            "route_table_id": "rtb-0d332c3a8a300d47d",
            "subnet_id": "subnet-0a2400019686c2868"
          },
          "dependencies": [
            "module.route_table.aws_route_table.this",
            "module.subnet.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377331501:subnet/subnet-015e542ffb07b1891",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-015e542ffb07b1891",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377331501",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-a"
            },
            "tags_all": {
              "Name": "subnet-a"
            },
            "vpc_id": "vpc-03ea246cf31627f2e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377331501:subnet/subnet-0a2400019686c2868",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a2400019686c2868",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377331501",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-b"
            },
            "tags_all": {
              "Name": "subnet-b"
            },
            "vpc_id": "vpc-03ea246cf31627f2e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377331501:vpc/vpc-03ea246cf31627f2e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04f983250822ee946",
            "default_route_table_id": "rtb-084affd11f4df4f93",
            "default_security_group_id": "sg-01d3959b760784942",
            "dhcp_options_id": "dopt-02b2e22ed9bef210d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03ea246cf31627f2e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-084affd11f4df4f93",
            "owner_id": "891377331501",
            "tags": {
              "Name": "example-vpc"
            },
            "tags_all": {
              "Name": "example-vpc"
            }
          }
        }
      ]
    }
  ]
}